--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,10 @@ body{
     
 }
 
+.designed{
+    margin: 5rem;
+}
+
 .fab:hover, .curriculum:hover{
     box-shadow: inset -0.1rem -0.1rem 0.3rem #8acdd7, inset 0.1rem 0.1rem 0.3rem #8acdd7;
     cursor: pointer;
